hamburger icon has been styled

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -87,6 +87,10 @@ nav .list {
     color: var(--color-accent);
 }
 
+.logo-section i{
+    margin-top: 6px;
+}
+
 .user-actions {
     display: inline-flex;
     gap: 8px;
@@ -98,13 +102,13 @@ nav .list {
     margin: 0 24px;
 }
 
-nav .list li, .icons i {
+nav .list li, .logo-section i, .icons i {
     cursor: pointer;
     font-size: 1.2rem;
     transition: 2s;
 }
 
-nav .list li:hover, .icons i:hover {
+nav .list li:hover, .logo-section i:hover, .icons i:hover {
     color: var(--color-accent);
 }
 
