--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,9 +38,6 @@
   --button-text: #FFFFFF;
 }
 
-
-
-
 * {
     margin: 0;
     padding: 0;
@@ -52,7 +49,7 @@ html {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-body {
+.hero-section {
     height: 100vh;
     background-color: var(--color-bg);
 }
@@ -122,4 +119,9 @@ nav .list li:hover, .logo-section i:hover, .icons i:hover {
 .user-actions select:hover {
     background-color: var(--text-secondary);
     color: var(--color-bg);
+}
+
+/* main */
+main {
+    background-color: seagreen;
 }
