--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,6 +52,8 @@ html {
 .hero-section {
     height: 100vh;
     background-color: var(--color-bg);
+    display: flex;
+    flex-direction: column;
 }
 
 nav {
@@ -124,4 +126,13 @@ nav .list li:hover, .logo-section i:hover, .icons i:hover {
 /* main */
 main {
     background-color: seagreen;
+    flex: 1;
+}
+
+.tagline {
+    padding: 10rem 2rem;
+    font-size: 3.2rem;
+    font-weight: 900;
+    color: var(--color-primary);
+    background-color: sienna;
 }
