--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -136,3 +136,5 @@ main {
     color: var(--color-primary);
     background-color: sienna;
 }
+
+/* TODO add models sections than some grid of somethig */
