--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,9 +49,6 @@ html {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-body {
-    position: relative;
-}
 .hero-section {
     height: 100vh;
     background-color: var(--color-bg);
@@ -143,7 +140,11 @@ main {
 /* TODO add models sections than some grid of somethig */
 
 .newsletter-btn {
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     right: 10px;
+    font-size: 3rem;
+    border: none;
+    border-radius: 50%;
+    background: none;
 }
