newsletter btn js | wrong target

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -147,4 +147,6 @@ main {
     border: none;
     border-radius: 50%;
     background: none;
+    cursor: pointer;
+    color: var(--color-primary);
 }
