--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -158,4 +158,10 @@ main {
     background-color: seagreen;
     border: solid 2px black;
     padding: 12px 16px;
+    height: 500px;
+    width: 400px;
+}
+
+.hidden {
+    display: none;
 }
