--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -157,9 +157,30 @@ main {
     right: 10px;
     background-color: seagreen;
     border: solid 2px black;
-    padding: 12px 16px;
+    /* border-radius: 2rem; */
+    /* padding: 12px 16px; */
     height: 500px;
     width: 400px;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+
+.newsletter-header {
+    background-color: var(--color-dark);
+    color: var(--button-text);
+    padding: 12px 16px;
+    display: inline-flex;
+}
+
+.newsletter-body {
+    background-color: sienna;
+    flex: 1;
+    padding: 12px 16px;
+}
+
+.newsletter-input {
+    padding: 12px 16px;
 }
 
 .hidden {
