--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,7 +76,7 @@ nav .list {
     margin: 0 24px;
 }
 
-.logo-section h2 {
+.logo-section h2, h2 {
     color: var(--color-primary);
     cursor: pointer;
     transition: 2s;
@@ -171,6 +171,27 @@ main {
     color: var(--button-text);
     padding: 12px 16px;
     display: inline-flex;
+    gap: 12px;
+}
+
+.newsletter-header button{
+    background: none;
+    outline: none;
+    border: none;
+    border-radius: 0.4rem;
+    color: var(--button-text);
+    cursor: pointer;
+    transition: 2s;
+    width: 30px;
+    height: 30px;
+}
+
+.newsletter-header button:hover {
+    background-color: var(--text-secondary);
+}
+
+.newsletter-header h4 {
+    margin: 8px;
 }
 
 .newsletter-body {
