--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -202,6 +202,7 @@ main {
 
 .newsletter-input {
     padding: 12px 16px;
+    position: relative;
 }
 
 .newsletter-input input {
@@ -211,6 +212,12 @@ main {
     outline: none;
 }
 
+.send-icon {
+    position: absolute;
+    right: 25px;
+    bottom: 25px;
+    cursor: pointer;
+}
 .hidden {
     display: none;
 }
