--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -155,7 +155,7 @@ main {
     position: fixed;
     bottom: 100px;
     right: 10px;
-    background-color: seagreen;
+    background-color: var(--color-bg);
     border: solid 2px black;
     /* border-radius: 2rem; */
     /* padding: 12px 16px; */
@@ -203,6 +203,7 @@ main {
 .newsletter-input {
     padding: 12px 16px;
     position: relative;
+    border-top: 1px solid var(--color-dark);
 }
 
 .newsletter-input input {
@@ -221,3 +222,6 @@ main {
 .hidden {
     display: none;
 }
+
+/* TODO fix the container border */
+/* TODO addd functionality for the newletter */
