--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -157,13 +157,14 @@ main {
     right: 10px;
     background-color: var(--color-bg);
     border: solid 2px black;
-    /* border-radius: 2rem; */
+    border-radius: 2rem;
     /* padding: 12px 16px; */
     height: 500px;
     width: 400px;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .newsletter-header {
@@ -172,6 +173,7 @@ main {
     padding: 12px 16px;
     display: inline-flex;
     gap: 12px;
+    /* border-radius: 2rem 0rem 2rem 0rem; */
 }
 
 .newsletter-header button{
