--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -272,14 +272,16 @@ main {
 }
 
 .products-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  gap: 10px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
 }
 
 .products-container img {
-  width: 100%;
-  aspect-ratio: 1 / 1;   /* ensures square */
-  object-fit: cover;
-  display: block;         /* removes inline spacing issues */
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    /* ensures square */
+    object-fit: cover;
+    display: block;
+    /* removes inline spacing issues */
 }
