--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -268,6 +268,13 @@ main {
     font-size: inherit;
 }
 
+.model-container {
+    display: flex;
+    gap: 8px;
+    padding: 0;
+    overflow: hidden;
+}
+
 .model-container img {
     width: 50%;
 }
