--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -153,6 +153,22 @@ main {
     background-color: var(--color-dark);
 }
 
+.cto {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.2rem;
+    color: var(--text-primary);
+    font-weight: 600;
+}
+
+.cto a {
+    text-decoration: none;
+    color: var(--text-primary);
+
+
+}
+
 /* TODO add models sections than some grid of somethig */
 
 .newsletter-btn {
@@ -264,13 +280,13 @@ main {
     border-radius: 1rem;
     width: 95%;
     margin: 0 auto;
-    padding: 1rem 2rem;
+    /* padding: 1rem 2rem; */
     font-size: inherit;
 }
 
 .model-container {
     display: flex;
-    gap: 8px;
+    /* gap: 8px; */
     padding: 0;
     overflow: hidden;
 }
