--- a/assets/css/vars.css
+++ b/assets/css/vars.css
@@ -58,3 +58,7 @@ html {
     font-size: 16px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+.hidden {
+    display: none;
+}
