fixed navbar | gotta use clac() for accuracy

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,10 @@ nav {
     display: flex;
     justify-content: flex-end;
     padding: 24px 12px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: var(--color-bg);
 }
 
 nav .list {
