--- a/assets/css/aside.css
+++ b/assets/css/aside.css
@@ -13,6 +13,7 @@
 
 .search-input {
     /* width: 100%; */
+    width: 90%;
     background-color: seagreen;
 }
 
@@ -23,4 +24,9 @@
     outline: none;
     border: none;
     border-bottom: 1px solid;
+    font-size: 1.2rem;
+}
+
+.search-input input::placeholder {
+    font-size: 1.2rem;
 }
