--- a/assets/css/aside.css
+++ b/assets/css/aside.css
@@ -15,6 +15,7 @@
     /* width: 100%; */
     width: 90%;
     background-color: seagreen;
+    position: relative;
 }
 
 .search-input input {
@@ -29,4 +30,12 @@
 
 .search-input input::placeholder {
     font-size: 1.2rem;
+}
+
+.search-input i {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    font-size: 1.5rem;
+    cursor: pointer;
 }
