--- a/assets/css/aside.css
+++ b/assets/css/aside.css
@@ -10,6 +10,8 @@
     width: 600px;
     height: 100%;
     background-color: var(--color-bg);
+    padding: 1rem 3rem;
+    box-sizing: border-box;
 }
 
 .search-input {
