--- a/assets/templates/products.html
+++ b/assets/templates/products.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
-</head>
-<body>
-    <h1>Products sliing imgs</h1>
-</body>
-</html>
+{% extends 'index.html'%}
+{% block title %}F&M | Products{% endblock %}
+
+{% block content %}
+<h1>This is the products slider</h1>
+
+
+
+
+{% endblock %}
