--- a/assets/templates/products.html
+++ b/assets/templates/products.html
@@ -1,10 +1,27 @@
-{% extends 'index.html'%}
-{% block title %}F&M | Products{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/css/products.css">
+    <title>F&M | Products</title>
+  </head>
+  <body>
+    <h1>Welcome to products</h1>
+    <div class="actions">
+      <h2>New arrival</h2>
+      <div class="btns">
+        <button id="viewAllBtn">view all</button>
+        <button id="clothesBtn">clothes</button>
+        <button id="shoesBtn">shoes</button>
+        <button id="AccBtn">Accessories</button>
+      </div>
+    </div>
+    <div class="cto">
+      <p>Sort By</p>
+      <p>Filter</p>
+    </div>
+  </body>
+</html>
 
-{% block content %}
-<h1>This is the products slider</h1>
-
-
-
-
-{% endblock %}
+<!-- TODO paused till learning fetch -->
