change title content is functional

--- a/assets/templates/products.html
+++ b/assets/templates/products.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="actions">
-      <h2>New arrival</h2>
+      <h2 class="title">New arrival</h2>
       <div class="btns">
         <button id="viewAllBtn">view all</button>
         <button id="clothesBtn">clothes</button>
