putting everything in one fucntion changeTitle() for reusability & stuff

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -211,7 +211,7 @@ main {
     background-color: var(--text-secondary);
 }
 
-/* TODO fix the container border */
+/* TODO fix the container border | use overflow none*/
 /* TODO addd functionality for the newletter */
 
 /* ! models section */
