learn how to loop through a node list that was got by querySelectorAll

--- a/assets/css/products.css
+++ b/assets/css/products.css
@@ -41,3 +41,8 @@ body {
     font-weight: 600;
     padding: 1rem 2rem;
 }
+
+.active-btn {
+    background-color: var(--color-dark);
+    color: var(--color-bg);
+}
