--- a/assets/templates/products.html
+++ b/assets/templates/products.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/css/products.css">
     <title>F&M | Products</title>
-    <script src="/assets/js/products.js" defer></script>
+    <script type="module" src="/assets/js/products.js" defer></script>
   </head>
   <body>
     <div class="actions">
